<resources>
    <string name="app_name">SuitmediaTest</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome,</string>
    <string name="username">Username</string>
    <string name="first_name">Selected</string>
    <string name="last_name">Username</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="retry">Retry</string>
</resources>